<resources>
    <string name="app_name">Pilot</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_home">Map</string>
    <string name="title_activity_map">Map</string>

    <string name="title_activity_map_full_screen">MapFullScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_request">Map</string>

    <string-array name="select_option">
        <item>@string/Account_Statment</item>
        <item>@string/Account_Booking_History</item>
        <item>@string/Account_Cancel_History</item>
    </string-array>
    <string name="select_prompt">Select an option</string>

    // Welcome Activity
    <string name="Booking_Circle">Booking</string>
    <string name="Earning_Circle">Earning</string>
    <string name="Cancel_Circle">Cancel</string>
    <string name="Pickup_Circle">Pickup</string>
    <string name="Welcome_Profile">Profile</string>
    <string name="Welcome_Ride">Rides</string>
    <string name="Welcome_AccountInfo">Account</string>
    <string name="Welcome_Help">Help</string>
    <string name="Welcome_Login">Login</string>
    <string name="Welcome_Logout">Logout</string>

    //Blocked Account
    <string name="Account_blocked">Account Blocked !</string>
    <string name="block_message">This is an Invalid Account. Please contact Support Team.</string>

    //Profile Activity
    <string name="Profile_Cancel">Cancel</string>
    <string name="Profile_Save">Save</string>
    <string name="Profile_Title">Profile</string>

    //Map Activity

    <string name="Map_PickUp">Pick Up</string>
    <string name="Map_Located">Customer Located</string>
    <string name="Map_StartTrip">Start Trip</string>
    <string name="Map_Drop">Drop</string>
    <string name="Map_EndTrip">End Trip</string>
    <string name="Map_RideList">Rider List</string>
    <string name="Map_No">Yes</string>
    <string name="Map_Yes">No</string>
    <string name="Map_Confirm_Trip_Cancellation">Are you sure you want to cancel trip?</string>
    <string name="Map_Confirm_Trip_End">Do you want to end the trip?</string>
    <string name="Map_Ok">Ok</string>
    <string name="Map_Trip_Cancelled">Trip Cancelled !</string>
    <string name="Map_Trip_Cancelled_By_Customer">The trip is cancelled by Customer</string>
    <string name="Map_Trip_Cancelled_By_GetIntent">The trip is cancelled by</string>


    //Feedback Activity
    <string name="Feedback">Feedback</string>
    <string name="Feedback_TripEnded">Trip Ended</string>
    <string name="Feedback_Fare">Fare</string>
    <string name="Feedback_Offer">Offer</string>
    <string name="Feedback_Parking">Parking  </string>

    <string name="Feedback_Cancel">Cancellation Charge</string>
    <string name="Feedback_Total">Total</string>
    <string name="Feedback_Rating">Customer Rating</string>
    <string name="Feedback_Save">Submit</string>

    //Incoming request
    <string name="Incoming_Request">Incoming Request</string>
    <string name="Incoming_Share_Request">Incoming Share Request</string>
    <string name="Confirm_Button">Confirm</string>
    //Otp Activity
    <string name="Otp_Enter">Enter OTP</string>
    <string name="Otp_Submit">Submit</string>

    //Trip Tags
    <string name="Trip_Cancelled">Trip Cancelled</string>
    <string name="Cancelled_by"> has cancelled the request</string>

    //Cancel Reason
    <string name="Cancel_Reason">Cancel Trip</string>


    //Login Activity
    <string name="Login_heading">Login</string>
    <string name="Ref_ID">Enter your Reference ID</string>
    <string name="Send_Otp">Send OTP</string>
    <string name="Enter_Otp">Enter OTP</string>
    <string name="Login">Login</string>
    <string name="Invalid_Ref">Invalid Reference number\n Please conatact to the Office</string>
    <string name="Invalid_OTP">Invalid OTP\n Try again</string>
    <string name="TimeOut_OTP">Time Out \n Please try again</string>

    //Ride Activity
    <string name="Ride_Current_Ride">Current Ride</string>
    <string name="Ride_Base_Fare">Base Fare</string>
    <string name="Ride_Total_Amt">Total</string>
    <string name="Ride_Tax">Tax</string>
    <string name="Ride_Offer">Offer</string>
    <string name="Ride_Time_Charge">Time Charge</string>
    <string name="Ride_Parking_Charge">Parking Charge</string>
    <string name="Ride_Cancel_Charge">Cancellation Charge</string>
    <string name="Ride_Waiting_Charge">Waiting Charge</string>
    <string name="Ride_Trip_Distance">Trip Distance</string>
    <string name="Ride_Pickup_Distanse">Pick up Distance</string>
    <string name="Ride_Paymnet_Mode">Payment Mode</string>
    <string name="Ride_Cash">Cash</string>
    <string name="Ride_Bill_Details">Bill Details</string>
    <string name="Ride_List">Bill Details</string>
    <string name="Ride_Trip_Details">Trip Details</string>
    <!--<string name="Send_Otp">Send OTP</string>-->


    //AccountInfo Activity
    <string name="Account_Title">Account Information</string>
    <string name="Account_Transection_History">Transection History</string>
    <string name="Account_Statment">Account Statement</string>
    <string name="Account_Booking_History">Booking History</string>
    <string name="Account_Cancel_History">Cancel History</string>
    <string name="Account_Load_Button">Load</string>
    <string name="Account_Earning">Earning</string>
    <string name="Account_Cash">Cash</string>
    <string name="Account_Paytm">Paytm</string>
    <string name="Account_Offer">Offer</string>
    <string name="Account_Deduction">Deduction</string>
    <string name="Account_Tax">Tax</string>
    <string name="Account_Cancel">Cancel</string>
    <string name="Account_Company_Cess">QuickLift Cess</string>
    <string name="Account_Outstanding">Outstanding Amount</string>
    <string name="Account_Total">Total Amount</string>

</resources>
