<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aa05affc"
    android:theme="@style/AppTheme2"
    tools:context="com.quickliftpilot.activities.Login">

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:orientation="vertical">-->

    <!--<EditText-->
    <!--android:id="@+id/phone"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="50dp"-->
    <!--android:hint="Email Address"-->
    <!--android:backgroundTint="@color/front_color"-->
    <!--android:inputType="textEmailAddress"/>-->

    <!--<EditText-->
    <!--android:id="@+id/password"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="50dp"-->
    <!--android:backgroundTint="@color/front_color"-->
    <!--android:hint="Password"-->
    <!--android:inputType="textPassword"/>-->

    <!--<Button-->
    <!--android:id="@+id/login"-->
    <!--android:layout_margin="10dp"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="50dp"-->
    <!--android:background="@color/back_color"-->
    <!--android:text="Login"/>-->

    <!--<Button-->
    <!--android:id="@+id/registration"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="50dp"-->
    <!--android:onClick="register"-->
    <!--android:layout_margin="10dp"-->
    <!--android:background="@color/back_color"-->
    <!--android:text="Register"/>-->

    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20sp"
        android:weightSum="5">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center_horizontal"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/reference"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/text"
            android:inputType="textEmailAddress"
            android:hint="@string/Ref_ID"
            android:gravity="center"
            android:layout_marginTop="15sp"
            android:textColor="#000000"
            android:textSize="22dp"
            android:background="@drawable/edittextstyle"/>
        <Button
            android:id="@+id/send_otp"
            android:layout_width="120sp"
            android:layout_height="50dp"
            android:text="@string/Send_Otp"
            android:textAllCaps="false"
            android:layout_marginTop="15sp"
            android:onClick="send_otp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:background="#05affc"
            android:layout_gravity="center_horizontal"/>
        <EditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:hint="@string/Enter_Otp"
            android:gravity="center"
            android:layout_marginTop="15sp"
            android:textColor="#000000"
            android:textSize="22sp"
            android:background="@drawable/edittextstyle"/>
        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/Login"
            android:onClick="submit"
            android:layout_below="@+id/reference"
            android:background="#05affc"
            android:layout_marginTop="20sp"
            android:textColor="#000000"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/err"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:textSize="15sp"/>
    </LinearLayout>
</ScrollView>