<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quickliftpilot.activities.AccountActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Account_Transection_History"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="18dp"/>

    <Spinner
        android:id="@+id/select"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/title"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:entries="@array/select_option"
        android:prompt="@string/select_prompt">
    </Spinner>

    <LinearLayout
        android:id="@+id/from_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/from_text"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="From"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/title"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/from_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/from_date_pick"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:onClick="date_from"
            android:layout_toRightOf="@id/from_date"
            android:layout_below="@+id/title"
            android:background="@color/front_color"
            android:src="@drawable/ic_action_date"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/to_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from_linear"
        android:layout_marginTop="2dp">
        <TextView
            android:id="@+id/to_text"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="To"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/to_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#000000"/>

        <ImageButton
            android:id="@+id/to_date_pick"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:onClick="date_to"
            android:background="@color/front_color"
            android:src="@drawable/ic_action_date"/>
    </LinearLayout>

    <View
        android:id="@+id/first_view"
        android:layout_below="@+id/to_linear"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="3dp"
        android:background="#000000"/>
    <Button
        android:id="@+id/load_btn"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/Account_Load_Button"
        android:onClick="load_btn"
        android:background="@color/back_color"
        android:layout_below="@+id/first_view"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"/>
    <View
        android:id="@+id/second_view"
        android:layout_below="@+id/load_btn"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="3dp"
        android:background="#000000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/second_view"
        android:id="@+id/list_layout"
        android:orientation="vertical">
        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:weightSum="2"-->
        <!--android:background="@color/back_color"-->
        <!--android:padding="5sp"-->
        <!--android:orientation="horizontal">-->
        <!--<TextView-->
        <!--android:id="@+id/drive_date"-->
        <!--android:layout_width="0sp"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textStyle="bold"-->
        <!--android:textSize="20sp"-->
        <!--android:gravity="center"-->
        <!--android:padding="5sp"-->

        <!--/>-->
        <!--<TextView-->
        <!--android:id="@+id/drive_name"-->
        <!--android:layout_width="0sp"-->
        <!--android:layout_weight="1"-->
        <!--android:textSize="20sp"-->
        <!--android:textStyle="bold"-->
        <!--android:gravity="center"-->
        <!--android:padding="5sp"-->
        <!--android:layout_height="wrap_content"-->
        <!--/>-->
        <!--</LinearLayout>-->
        <View
            android:id="@+id/second_view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/list_layout"
            android:divider="#ffffff"
            android:dividerHeight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="33dp">
        </ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_total"
        android:layout_alignParentBottom="true"
        android:background="@color/back_color"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:visibility="gone"
            android:gravity="center_vertical|end"
            android:paddingEnd="10dp" />
        <!--<TextView-->
        <!--android:id="@+id/drive_total"-->
        <!--android:layout_width="0sp"-->
        <!--android:layout_weight="1"-->
        <!--android:textSize="20sp"-->
        <!--android:textStyle="bold"-->
        <!--android:gravity="center"-->
        <!--android:padding="5sp"-->
        <!--android:layout_height="wrap_content"-->
        <!--/>-->
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/nodata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/load_btn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:text="No Data Available !!"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>